@@ -10,14 +10,13 @@ class LoginModel extends Model
 	{
 		$returnData = [];
 		
+		if (!$this->isLoginDataSet()) 
+		{ 
+			return $returnData; 
+		}
+
 		// Making sure we're not getting a extra location bar
 		$returnData["locations"] = ["noLocationBar" => true,];
-
-		// If the form is empty we dont want to continue
-		if ($this->isPostFormDataEmpty())
-		{
-			return $returnData;
-		}
 
 		// Getting the values from the form
 		$username = $_POST["username"];
@@ -36,9 +35,7 @@ class LoginModel extends Model
 		$_SESSION['loggedIn'] = true;
 
 		// If everthing is well we only want the alert to be returned, not the view itself.
-		// First we refresh the page (we made get a different view once we logged in) then calling the login succes alert.
-		echo json_encode(["view" => "<script type='text/javascript'>refreshPage(); callController(\".page\", \"alertController\", {\"alertType\":\"alertSuccess\",\"alertMessage\":\"Login succesful\"});</script>"]);
-		die();
+		$this->dieWithAlert("alertSuccess", "Login succesful", true);
 	}
 
 	/**
